# ray-optics

./: .gitattributes  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: python_wheel.yaml
codev/: ag_dblgauss.lis  ag_dblgauss.seq  cmdproc.py  reader.py  tla.py
codev/test/: ag_dblgauss.csv  ag_dblgauss.xlsx  ag_dblgauss_s.csv  asp46.seq  dec_test.seq  dec_tilt_test.seq  paraboloid.seq  rc_f16.seq  schmidt.seq  test.seq  threemrc_qbfs.lis
doc/: Introduction.rst  Makefile  conf.py  index.rst  install.rst  make.bat
doc/examples/: TripletExample.rst
doc/rayoptics/gui/: index.rst  jupyter.rst
doc/rayoptics/optical/: opticalspec.rst  optmodel.rst  paraxdesign.rst  raytrace.rst  sequential.rst
doc/rayoptics/qtgui/: index.rst
doc/source/: rayoptics.codev.rst  rayoptics.gui.rst  rayoptics.mpl.rst  rayoptics.optical.rst  rayoptics.qtgui.rst  rayoptics.rst  rayoptics.util.rst
doc/userguide/: models.rst  qt.rst
docs/: Introduction.rst  Makefile  conf.py  index.rst  install.rst
docs/api/: modules.rst  rayoptics.codev.rst  rayoptics.gui.rst  rayoptics.mpl.rst  rayoptics.optical.rst  rayoptics.optical.tests.rst  rayoptics.qtgui.rst  rayoptics.rst  rayoptics.util.rst
docs/examples/: TripletExample.rst
docs/examples/EdmundLensImport/: EdmundLensImport.rst
docs/rayoptics/gui/: interactive.rst  ipython.rst
docs/rayoptics/optical/: opticalspec.rst  optmodel.rst  paraxdesign.rst  sequential.rst
docs/rayoptics/qtgui/: index.rst
docs/source/: Introduction.rst  conf.py  index.rst  install.rst  rayoptics.optical.rst  rayoptics.qtgui.rst  rayoptics.util.rst  requirements.txt
docs/source/_static/: custom.css
docs/source/api/: rayoptics.codev.cmdproc.rst  rayoptics.codev.reader.rst  rayoptics.codev.rst  rayoptics.codev.tla.rst  rayoptics.elem.elements.rst  rayoptics.elem.layout.rst  rayoptics.elem.parttree.rst  rayoptics.elem.profiles.rst  rayoptics.elem.rst  rayoptics.elem.sgz2ele.rst  rayoptics.elem.surface.rst  rayoptics.elem.transform.rst  rayoptics.environment.rst  rayoptics.gui.actions.rst  rayoptics.gui.appcmds.rst  rayoptics.gui.appmanager.rst  rayoptics.gui.dashboards.rst  rayoptics.gui.roafile.rst  rayoptics.gui.rst  rayoptics.gui.util.rst  rayoptics.mpl.analysisfigure.rst  rayoptics.mpl.analysisplots.rst  rayoptics.mpl.axisarrayfigure.rst  rayoptics.mpl.interactivediagram.rst  rayoptics.mpl.interactivefigure.rst  rayoptics.mpl.interactivelayout.rst  rayoptics.mpl.rst  rayoptics.mpl.styledfigure.rst  rayoptics.oprops.doe.rst  rayoptics.oprops.rst  rayoptics.oprops.thinlens.rst  rayoptics.optical.model_constants.rst  rayoptics.optical.model_enums.rst  rayoptics.optical.obench.rst  rayoptics.optical.opticalmodel.rst  rayoptics.optical.rst  rayoptics.parax.diagram.rst  rayoptics.parax.etendue.rst  rayoptics.parax.firstorder.rst  rayoptics.parax.idealimager.rst  (+41 more)
docs/source/devguide/: gui.rst  index.rst  qtgui.rst  roa_file_definition.rst
docs/source/examples/: TripletExample.rst
docs/source/models/: index.rst  opticalspec.rst  optmodel.rst  sequential.rst
docs/source/optical/: index.rst  paraxdesign.rst  raytrace.rst
docs/source/userguide/: qt_app.rst  scripting.rst
docs/userguide/: calc.rst  gui.rst  interactive.rst  ipython.rst  jupyter.rst
glass/: HOYA20171226.xlsx  glassfactory.py  hoya.py  ohara-excel-glass-data-12-02-2016.xlsx  ohara.py  schott-optical-glass-overview-excel-table-english-06032017.xls  schott.py
glass/test/: test_hoya.py  test_ohara.py  test_schott.py
gui/: appmanager.py  glassmapviewer.py  glassmapviewer.ui  graphicsitems.py  paraxdgncanvas.py  plotcanvas.py  pytablemodel.py  rayopticsapp.py  red_blue64.csv  rgbtable.py  sunset_rgb.csv
gui/mpl/: axisarrayfigure.py  lenslayoutfigure.py  paraxdgnfigure.py
json/test/: rc_f16.roa
models/: Cassegrain.roa  Dall_Kirkham.roa  HybridAchromat.roa  Ritchey_Chretien.roa  Sasian Triplet.roa  TwoMirror.roa  TwoSphericalMirror.roa  collimator.roa  double2frelay.roa  galilean.roa  petzval.roa  telephoto.roa
optical/: elements.py  firstorder.py  gap.py  globalspec.py  marginal_ray.py  medium.py  model_constants.py  opticalmodel.py  opticalspec.py  paraxialdesign.py  profiles.py  raytrace.py  read_schott_catalog.py  schott-optical-glass-overview-excel-table-english-06032017.xls  schott.py  sequential.py  spectral lines.xlsx  spectral_lines.py  surface.py  surfaces.py  test_profiles.py  test_schott.py  test_sequential.py  thinlens.py  thirdorder.py  transform.py
optical/test/: test_profiles.py  test_sequential.py
rayoptics/: __init__.py  environment.py
rayoptics/codev/: __init__.py  cmdproc.py  reader.py  tla.py
rayoptics/codev/test/: dar_test.seq  singlet.seq  tilt_test.seq
rayoptics/gui/: appcmds.py  appmanager.py  glassmapviewer.py  layout.py  plotcanvas.py  rayopticsapp.py
rayoptics/gui/mpl/: axisarrayfigure.py  paraxdgnfigure.py
rayoptics/mpl/: __init__.py  analysisplots.py  axisarrayfigure.py  lenslayoutfigure.py  paraxdgnfigure.py
rayoptics/optical/: __init__.py  elements.py  firstorder.py  gap.py  medium.py  model_constants.py  model_enums.py  opticalmodel.py  opticalspec.py  paraxialdesign.py  profiles.py  raytrace.py  sequential.py  surface.py  thinlens.py  thirdorder.py  trace.py  traceerror.py  transform.py  twoconicmirrors.py
rayoptics/optical/test/: ag_dblgauss_s.py  cell_phone_camera.roa  singlet_f3.roa  test_profiles.py  (+11 more)
rayoptics/qtgui/: dockpanels.py  graphicsitems.py  ipyconsole.py  plotcanvas.py  plotview.py  pytablemodel.py  rayopticsapp.py
rayoptics/util/: colour_system.py  line_intersection.py  misc_math.py  rgbtable.py  spectral_lines.py
src/models/: thinlens.roa
src/rayoptics/: __init__.py  _version.py  coord_geometry_types.py  environment.py  typing.py
test/: Cassegrain.roa  Dall_Kirkham.roa  Ritchey_Chretien.roa  Sasian Triplet.roa  TwoMirror.roa  TwoSphericalMirror.roa  galilean.roa  petzval.roa
tests/: Cassegrain.roa  Dall_Kirkham.roa  Ritchey_Chretien.roa  singlet_f5.roa
util/: line_intersection.py  misc_math.py  spectral lines.csv
(+204 files in other folders)
