# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = rayoptics
description = Tools for image forming optical design and analysis
author = Michael J Hayford
author-email = mjhoptics@gmail.com
license = BSD 3 Clause
url = https://github.com/mjhoptics/ray-optics
long-description = file: README.rst
long_description_content_type = text/x-rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
keywords = geometric optics, ray tracing, image forming optics,
            paraxial optics, optical design, lens design,
            aberrations, opd, psf

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0

install_requires =
    opticalglass>=0.4.5
    numpy>=1.17.1
    scipy>=1.3.1
    matplotlib>=3.1.1
    json_tricks>=3.13.2
    pandas>=0.25.1
    attrs>=19.1.0
    transforms3d>=0.3.1
    traitlets>=4.3.2
    ipywidgets>=7.5.1
    qtconsole>=4.5.5
    qdarkstyle>=2.8

# option to install pyqt5 separately, either via pip or Anaconda
#extras_require =
#    QtGUI = pyqt5

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov

python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ray-optics[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = rayoptics.module:function
# For example:
# console_scripts =
#     fibonacci = rayoptics.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
gui_scripts =
    rayoptics = rayoptics.qtgui.rayopticsapp:main

[options.package_data]
codev = tla_mapping.csv, tests/*.seq, tests/*.roa
util = cie-cmf.txt, *.csv
models = models/*.roa

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
#    --cov rayoptics --cov-report term-missing
    --verbose
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
norecursedirs =
    dist
    build
    .tox
testpaths =
    src
    tests

[aliases]
build = bdist_wheel
release = build upload

[build_sphinx]
source_dir = docs/source
build_dir = docs/build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = rayoptics
extensions =
    no_skeleton

[versioneer]
VCS = git
style = pep440
versionfile_source = rayoptics/_version.py
versionfile_build = rayoptics/_version.py
tag_prefix = "v"
parentdir_prefix = rayoptics
